cleaned up outputs

--- a/frequency_matrix_motifs_combined.ipynb
+++ b/frequency_matrix_motifs_combined.ipynb
@@ -34,229 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frqc_mat = ResultParser.frequency_matrix(loaded_dict=combined_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>OTX1</th>\n",
-       "      <th>RREB1</th>\n",
-       "      <th>DMRT2</th>\n",
-       "      <th>COMP1</th>\n",
-       "      <th>AP1</th>\n",
-       "      <th>NOTO</th>\n",
-       "      <th>HOXD1</th>\n",
-       "      <th>TBX2</th>\n",
-       "      <th>TBX20</th>\n",
-       "      <th>IKZF1</th>\n",
-       "      <th>...</th>\n",
-       "      <th>DLX4</th>\n",
-       "      <th>GBX2</th>\n",
-       "      <th>LMX1A</th>\n",
-       "      <th>RARB</th>\n",
-       "      <th>EGR4</th>\n",
-       "      <th>ZSCAN26</th>\n",
-       "      <th>NFE2L1::MAFG</th>\n",
-       "      <th>HNF4</th>\n",
-       "      <th>EVX1</th>\n",
-       "      <th>SMAD4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>chr1_11869_+_ENSG00000223972_DDX11L1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>chr1_12010_+_ENSG00000223972_DDX11L1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>28</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>chr1_29570_-_ENSG00000227232_WASH7P</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>39</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>chr1_17436_-_ENSG00000278267_MIR6859-1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>48</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>chr1_29554_+_ENSG00000243485_MIR1302-2HG</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 616 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                          OTX1  RREB1  DMRT2  COMP1  AP1  \\\n",
-       "chr1_11869_+_ENSG00000223972_DDX11L1         4      0      0      0   10   \n",
-       "chr1_12010_+_ENSG00000223972_DDX11L1         4      0      0      0    7   \n",
-       "chr1_29570_-_ENSG00000227232_WASH7P          4      0      0      0    9   \n",
-       "chr1_17436_-_ENSG00000278267_MIR6859-1       0      0      0      0    8   \n",
-       "chr1_29554_+_ENSG00000243485_MIR1302-2HG     0      0      0      0   15   \n",
-       "\n",
-       "                                          NOTO  HOXD1  TBX2  TBX20  IKZF1  \\\n",
-       "chr1_11869_+_ENSG00000223972_DDX11L1         1      0     0      0      0   \n",
-       "chr1_12010_+_ENSG00000223972_DDX11L1         1      0     0      0      0   \n",
-       "chr1_29570_-_ENSG00000227232_WASH7P          0      0     0      0      1   \n",
-       "chr1_17436_-_ENSG00000278267_MIR6859-1       0      0     0      0      0   \n",
-       "chr1_29554_+_ENSG00000243485_MIR1302-2HG     0      0     0      0      0   \n",
-       "\n",
-       "                                          ...  DLX4  GBX2  LMX1A  RARB  EGR4  \\\n",
-       "chr1_11869_+_ENSG00000223972_DDX11L1      ...     1     1      0     0     0   \n",
-       "chr1_12010_+_ENSG00000223972_DDX11L1      ...     1     1      0     0     0   \n",
-       "chr1_29570_-_ENSG00000227232_WASH7P       ...     1     0      0     0     0   \n",
-       "chr1_17436_-_ENSG00000278267_MIR6859-1    ...     0     0      0     0     0   \n",
-       "chr1_29554_+_ENSG00000243485_MIR1302-2HG  ...     0     0      0     0     0   \n",
-       "\n",
-       "                                          ZSCAN26  NFE2L1::MAFG  HNF4  EVX1  \\\n",
-       "chr1_11869_+_ENSG00000223972_DDX11L1            0             1    25     1   \n",
-       "chr1_12010_+_ENSG00000223972_DDX11L1            0             1    28     1   \n",
-       "chr1_29570_-_ENSG00000227232_WASH7P             0             0    39     0   \n",
-       "chr1_17436_-_ENSG00000278267_MIR6859-1          0             0    48     1   \n",
-       "chr1_29554_+_ENSG00000243485_MIR1302-2HG        0             0    16     0   \n",
-       "\n",
-       "                                          SMAD4  \n",
-       "chr1_11869_+_ENSG00000223972_DDX11L1          0  \n",
-       "chr1_12010_+_ENSG00000223972_DDX11L1          0  \n",
-       "chr1_29570_-_ENSG00000227232_WASH7P           0  \n",
-       "chr1_17436_-_ENSG00000278267_MIR6859-1        0  \n",
-       "chr1_29554_+_ENSG00000243485_MIR1302-2HG      0  \n",
-       "\n",
-       "[5 rows x 616 columns]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "frqc_mat = ResultParser.frequency_matrix(loaded_dict=combined_data)\n",
     "frqc_mat.head()"
    ]
   },
